--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Pagina web</title>
 	
-		<link rel="stylesheet" type="text/css" href="C:\Users\Ismael\Desktop\Propuesta\css/estilos.css">
+		<link rel="stylesheet" type="text/css" href="https://videosgamesdc.github.io/estilos/estilos.css">
 		
 
 
