--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<section class="contenedor sobre-nosotros">
 			<h2 class="titulo">Nuestro Producto</h2>
 			<div class="contenedor-sobre-nosotros">
-				<img src="C:\Users\Ismael\Desktop\Propuesta\FOTOS/fondo4.jpg" alt="" class="imagen-about-us">
+				<img src="https://videosgamesdc.github.io/FOTOS/fondo4.jpg" alt="" class="imagen-about-us">
 				<div class="contenido-textos">
 					<h3><span>1</span>NUEVOS PRODUCTOS</h3>
 					<p>En VideoGames.DC, ofrecemos una amplia variedad de ofertas y descuentos para asegurarnos de que obtengas tus videojuegos favoritos, así como nuevos lanzamientos, todo a un excelente precio. Sigue leyendo para ver las ofertas especiales de esta semana.</p><br>
